--- a/P5-loops.Rmd
+++ b/P5-loops.Rmd
@@ -37,6 +37,29 @@ Use a `for` loop to sum every kth integer between `m` and `n`.
 
 Use a `for` loop to sum every odd integer between `m` and `n`.
 
+### `fizzBuzz()`
+
+The "Fizz-Buzz test" is a classic interview question for programming job candidates. Write a function that prints the numbers from 1 to 100 (with each number on a new line), but for multiples of `3` print "Fizz" instead of the number, and for multiples of `5` print "Buzz". For numbers which are multiples of both `3` and `5` print "FizzBuzz". The first 16 lines of `fizzBuzz()` should read:
+
+```{r, eval=FALSE}
+1
+2
+"Fizz"
+4
+"Buzz"
+"Fizz"
+7
+8
+"Fizz"
+"Buzz"
+11
+"Fizz"
+13
+14
+"FizzBuzz"
+16
+```
+
 # `while` loops
 
 ### `nthMultipleOf4Or7(n)`
